# flint-django

./: .gitignore  LICENSE  README.md  cookiecutter.json  setup.cfg
hooks/: post_gen_project.py
{{cookiecutter.project_repo_name}}/: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_repo_name}}/docs/: Makefile
{{cookiecutter.project_repo_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_repo_name}}/{{cookiecutter.project_repo_name}}/: settings.py
